# HERMES

./: .gitignore  pyproject.toml
.claude/: settings.local.json
docs/: README.md  api.md  architecture.md  data-model.md  evaluation.md  goals.md  integration-hyperon.md  ledgerpg-server-mvp.md  message-contracts.md  milestones.md  open-questions.md  scenarios.md
docs/metta/: examples.metta  hermes-demo.metta
docs/samples/traces/: hello-cube.jsonl  move-cube.jsonl
docs/sketch/: ingest.py  ingestion-sketch.md
docs/spec/: hermes-spec.md
hermes/: __init__.py  atoms.py  attribute.py  ingest.py  serialize.py
hermes/experiments/ledgerpg/: bias.py  (+9 more)
results/: paired.jsonl  paired_all.jsonl  paired_foodgoal_5seed.jsonl  paired_foodgoal_fixpick.jsonl  paired_foodgoal_scale005.jsonl  paired_foodgoal_smoke.jsonl  paired_foodgoal_tol1e9.jsonl  paired_foodgoal_toltiebreak.jsonl  paired_groupmean_nofilter.jsonl  paired_groupmean_scale10.jsonl  paired_part2.jsonl  paired_petta_500step.jsonl  paired_petta_groupmean.jsonl  paired_petta_smoke.jsonl  paired_restdrain_smoke.jsonl  paired_smallgrid_smoke.jsonl  paired_tiny1.jsonl  paired_tiny_smoke.jsonl  paired_trace_only.jsonl  run_log_part2.txt  summary_groupmean.txt  trace_foodgoal_smoke.txt  trace_groupmean_scale10_seed42.txt  trace_petta_500step.txt  trace_petta_groupmean.txt  trace_restdrain_seed42.txt  trace_smallgrid_smoke.txt
scripts/: run_acceptance.py  run_paired_comparison.py  summarize_paired.py
tests/: test_attribute.py  test_hyperon_scorer_parity.py  test_ingest.py
tests/fixtures/: ledgerpg_canned_trace.json
(+9 files in other folders)
