[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes"
version = "0.1.0"
description = "Hypergraph Experiential Reasoning and Motivational Engagement System (paper-scope MVP)"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["hermes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
